--- a/config.toml
+++ b/config.toml
@@ -43,7 +43,7 @@ arch = "arm-v7a"
 build-mode = "apk"
 merge-integrations = true
 excluded-patches = "hide-views-stats"
-version = "auto"
+version = "9.79.0-release.1"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/twitter-inc/twitter/"
 
 [Reddit]
