--- a/config.toml
+++ b/config.toml
@@ -54,43 +54,80 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/twitch-interactive-inc/twitch/"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
 
 [Reddit]
-enabled = false
+enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit/"
 
 [Spotify]
-enabled = false
+enabled = true
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 
 [Citra]
-enabled = false
+enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/citra-emulator/citra-emulator/"
 arch = "arm64-v8a"
 
 [Backdrops]
-enabled = false
+enabled = true
 uptodown-dlurl = "https://backdrops.en.uptodown.com/android"
 
 [WarnWetter]
-enabled = false
+enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/deutscher-wetterdienst/warnwetter/"
 
 [Windyapp]
-enabled = false
+enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/windy-weather-world-inc/windy-wind-weather-forecast/"
 
 [IconPackStudio]
-enabled = false
+enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-studio/"
 
 [TickTick]
-enabled = false
+enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/appest-inc/ticktick-to-do-list-with-reminder-day-planner/"
 arch = "arm64-v8a"
 
 [Tasker]
-enabled = false
+enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/joaomgcd/tasker/"
 
 [Photomath]
-enabled = false
+enabled = true
 apkmonk-dlurl = "https://www.apkmonk.com/app/com.microblink.photomath/"
+
+[NovaLauncher]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/teslacoil-software/nova-launcher/"
+
+[NetGuard]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/marcel-bokhorst/netguard-no-root-firewall/"
+
+[IrPlus]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/binarymode/irplus-infrared-remote/"
+
+[Instagram]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/instagram/instagram-instagram/"
+
+[MyExpenses]
+enabled = true
+uptodown-dlurl = "https://my-expenses.en.uptodown.com/android"
+
+[NyxMusicPlayer]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/awedea/nyx-music-player/"
+
+[Messenger]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/messenger/"
+
+[VSCO]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/vsco/vsco-cam/"
+
+[CandyLinkVPN]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/liondev-io/candylink-vpn/"
+
