--- a/config.toml
+++ b/config.toml
@@ -92,7 +92,7 @@ enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/joaomgcd/tasker/"
 
 [Photomath]
-enabled = true
+enabled = false
 apkmonk-dlurl = "https://www.apkmonk.com/app/com.microblink.photomath/"
 
 [NovaLauncher]
