--- a/config.toml
+++ b/config.toml
@@ -135,3 +135,4 @@ arch = "arm64-v8a"
 [SyncForReddit]
 enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/red-apps-ltd/sync-for-reddit/"
+integrations-source = "revanced/revanced-integrations"
