--- a/config.toml
+++ b/config.toml
@@ -1,66 +1,112 @@
+parallel-jobs = 1
+logging-to-file = true        # enables logging of every patch process to a seperate file
 enable-magisk-update = true   # set this to false if you do not want to receive updates for the module in magisk app
 
 # add 'enabled = false' for not patching a specific app or remove it from the config
 # see https://github.com/j-hc/revanced-magisk-module/blob/main/CONFIG.md for more detailed explanations
 
-# you can use rvmm-config-gen to generate a config
-
-[YouTube]
-build-mode = "both"
-excluded-patches = ""
-included-patches = ""
-version = "auto"
-archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
-
-[Music]
-build-mode = "both"
-archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.apps.youtube.music"
-arch = "both"
-
 [Twitter]
+enabled = false
 build-mode = "apk"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.twitter.android"
 
 [Twitch]
+enabled = false
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/tv.twitch.android.app"
 
 [TikTok]
+enabled = false
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.zhiliaoapp.musically"
 included-patches = "'SIM spoof'"
 
 [Reddit]
+enabled = false
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.reddit.frontpage"
 
+[Lightroom]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/adobe/lightroom/"
+apkmirror-arch = "arm64-v8a + x86_64"
+
 [Messenger]
-enabled = false
+enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/messenger/"
-arch = "arm64-v8a"
+apkmirror-arch = "arm64-v8a"
 
 [Spotify]
-enabled = false
+enabled = true
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 
+[Citra]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/citra-emulator/citra-emulator/"
+apkmirror-arch = "arm64-v8a"
+
+[Backdrops]
+enabled = true
+uptodown-dlurl = "https://backdrops.en.uptodown.com/android"
+
+[WarnWetter]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/deutscher-wetterdienst/warnwetter/"
+
+[Windyapp]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/windy-weather-world-inc/windy-wind-weather-forecast/"
+
 [IconPackStudio]
-enabled = false
+enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-studio/"
 
-[Music-Extended]
-enabled = false
-app-name = "Music"
-patches-source = "inotia00/revanced-patches"
-integrations-source = "inotia00/revanced-integrations"
-cli-source = "inotia00/revanced-cli"
-rv-brand = "ReVanced Extended"
-build-mode = "both"
-archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.apps.youtube.music"
-arch = "both"
+[TickTick]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/appest-inc/ticktick-to-do-list-with-reminder-day-planner/"
+apkmirror-arch = "arm64-v8a"
 
-[YouTube-Extended]
+[Tasker]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/joaomgcd/tasker/"
+
+[Photomath]
 enabled = false
-app-name = "YouTube"
-patches-source = "inotia00/revanced-patches"
-integrations-source = "inotia00/revanced-integrations"
-cli-source = "inotia00/revanced-cli"
-rv-brand = "ReVanced Extended"
-build-mode = "both"
-archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
+apkmonk-dlurl = "https://www.apkmonk.com/app/com.microblink.photomath/"
+
+[NovaLauncher]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/teslacoil-software/nova-launcher/"
+
+[NetGuard]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/marcel-bokhorst/netguard-no-root-firewall/"
+
+[IrPlus]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/binarymode/irplus-infrared-remote/"
+
+[Instagram]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/instagram/instagram-instagram/"
+apkmirror-arch = "arm64-v8a"
+
+[MyExpenses]
+enabled = true
+uptodown-dlurl = "https://my-expenses.en.uptodown.com/android"
+
+[NyxMusicPlayer]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/awedea/nyx-music-player/"
+apkmirror-arch = "arm64-v8a"
+
+[VSCO]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/vsco/vsco-cam/"
+
+[CandyLinkVPN]
+enabled = false
+apkmirror-dlurl = "https://www.apkmirror.com/apk/liondev-io/candylink-vpn/"
+apkmirror-arch = "arm64-v8a"
+
+[SyncForReddit]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/red-apps-ltd/sync-for-reddit/"
+integrations-source = "revanced/revanced-integrations"
